@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-12-04T00:45:53Z",
+  "timestamp" : "2025-12-07T00:52:40Z",
   "count_outdated" : 286,
   "uniques_outdated" : 252,
-  "count" : 287,
-  "uniques" : 253,
+  "count" : 288,
+  "uniques" : 254,
   "clones" : [
     {
       "timestamp": "2025-11-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
